k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minha-app
spec:
  selector:
    app: minha-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
